--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Balkrishna, it uses data from mapbox.com and darksky.net!</p>
         <img class="portait" src="/img/mypic.jpeg">
     </div>
     
